contact height on mobile view fixed

--- a/css/main.css
+++ b/css/main.css
@@ -367,6 +367,10 @@ address {
     padding: 0 calc(var(--margin) * 1.5);
   }
 
+  address {
+    height: calc(100vh - 70px - 48px - var(--margin)); /* 70: section height, 48: h4 height + margin-top, --margin: body padding-bottom */
+  }
+
   .links-container a {
     display: block;
   }
